[tool.poetry]
name = "vault-client"
version = "0.2.0"
description = ""
authors = ["Nana Duah <gabano2005@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
