[tool.poetry]
name = "vaultclient"
version = "0.2.0"
description = ""
authors = ["Nana Duah <gabano2005@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
requests = "^2.27.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
